Add second and third recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/broccoli-cheddar-soup.html">Broccoli Cheddar Soup</a>
+    <p><a href="recipes/broccoli-cheddar-soup.html">Broccoli Cheddar Soup</a></p>
+    <p><a href="recipes/air-fryer-broccoli.html">Air Fryer Broccoli</a></p>
+    <p><a href="recipes/tofu-broccoli-bowls.html">Tofu Broccoli Bowls</a></p>
 </body>
 </html>
